[package]
name = "mtmf"
version = "0.1.0"
edition = "2021"
authors = ["MintThisMF Contributors"]
description = "A CLI tool for minting NFTs on the Flow blockchain"
license = "MIT"
repository = "https://github.com/yourusername/mtmf"
readme = "README.md"

[lib]
name = "mtmf"
path = "src/lib.rs"

[[bin]]
name = "mtmf"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Networking
reqwest = { version = "0.12", features = ["json", "multipart"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
p256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
ring = "0.17"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
zeroize = "1.8"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Filesystem
directories = "5.0"

# Password input
rpassword = "7.3"

# Hex encoding
hex = "0.4"

# Base64 encoding
base64 = "0.22"

# RLP encoding for Flow transactions
rlp = "0.5"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.12"
mockito = "1.5"
predicates = "3.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
